        PR tree-opt/25911         * tree-vect-patterns.c (vect_recog_dot_prod_pattern): Change assert         to an if check.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@110377 138bc75d-0d04-0410-961f-82ee72b054a4